VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc13Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [16MB/455.1MB][  3%][=>                                                ][5.333MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][12MB/s]  [80MB/455.1MB][ 17%][========>                                         ][16MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][20MB/s]  [152MB/455.1MB][ 33%][================>                                 ][21.71MB/s]  [176MB/455.1MB][ 38%][===================>                              ][22MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][22.22MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][21.6MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][21.82MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][22MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][22.15MB/s]  [312MB/455.1MB][ 68%][==================================>               ][22.29MB/s]  [336MB/455.1MB][ 73%][====================================>             ][22.4MB/s]  [368MB/455.1MB][ 80%][========================================>         ][23MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][22.59MB/s]  [408MB/455.1MB][ 89%][============================================>     ][22.67MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][22.74MB/s]  [448MB/455.1MB][ 98%][=================================================>][22.4MB/s]  [455.1MB/455.1MB][100%][==================================================][22.75MB/s]  [455.1MB/455.1MB][100%][==================================================][22.75MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_63328/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_63328/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
